free-spins modal fix, account-details cards fix, collapse.show removed

--- a/src/styles/components/_account-details.scss
+++ b/src/styles/components/_account-details.scss
@@ -2,6 +2,8 @@
   padding: 10px 15px;
   .card-body {
     height: $account-details-panel-height;
+    padding: 7px;
+    font-size: 13px;
     overflow-y: auto;
     overflow-x: hidden;
     word-break: break-all;
@@ -11,14 +13,9 @@
     text-transform: uppercase;
     color: #999;
   }
-  &__personal-info .card-body {
-    padding: 7px;
-    font-size: 13px;
-  }
   &__additional-info {
     .card-body {
-      padding: 5px 7px;
-      font-size: 13px;
+      padding-top: 5px;
     }
     &__label {
       font-size: 11px;
@@ -30,16 +27,7 @@
       pointer-events: none;
     }
   }
-  &__network .card-body {
-    padding: 7px;
-    font-size: 13px;
-    overflow-x: hidden;
-  }
   &__pinned-notes {
-    .card-body {
-      padding: 7px;
-      overflow-x: hidden;
-    }
     .card {
       display: block;
       margin-bottom: 9px;
@@ -81,13 +69,5 @@
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
-  }
-}
-
-.bonus__campaign__target,
-.bonus__campaign__fulfillment-reward {
-  .panel-body {
-    padding: 7px;
-    font-size: 13px;
   }
 }
