--- a/src/styles/utilities.scss
+++ b/src/styles/utilities.scss
@@ -409,10 +409,6 @@ small {
   }
 }
 
-.collapse.show {
-  display: block;
-}
-
 .profile-tab-container .well {
   margin-bottom: 25px;
   padding: 25px;
